force-app/main/default/objects/Case/fields/I_RM_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Email_Formula__c</fullName>
    <description>Fetches email based on the role of associated affiliation</description>
    <formula>IF( ISBLANK( SuppliedEmail )  ,   I_RM_Affiliation__r.I_RM_To_Email__c   , SuppliedEmail  )</formula>
    <label>Email To be Used</label>
    <type>Text</type>
</CustomField>