force-app/main/default/objects/Case/fields/I_RM_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>