force-app/main/default/objects/Case/fields/I_RS_Created_By_is_logged_in_user__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Created_By_is_logged_in_user__c</fullName>
    <formula>IF (CreatedById = $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By is logged in user</label>
    <type>Checkbox</type>
</CustomField>