force-app/main/default/objects/Case/fields/I_RS_Related_Area__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_Area__c</fullName>
    <label>Related Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Industry Engagement</fullName>
            </value>
            <value>
                <fullName>Research Performance</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>