force-app/main/default/objects/Case/fields/I_ST_Activity_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Activity_Evaluation__c</fullName>
    <label>Activity Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Activity_Evaluation</valueSetName>
    </valueSet>
</CustomField>