force-app/main/default/objects/Case/fields/I_ST_Activity_Evaluation_Comment__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Activity_Evaluation_Comment__c</fullName>
    <label>Activity Evaluation Comment</label>
    <type>TextArea</type>
</CustomField>