force-app/main/default/objects/Case/fields/I_ST_Activity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Activity_Outcome__c</fullName>
    <label>Activity Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled Consultation</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>