force-app/main/default/objects/Case/fields/I_ST_Actual_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Actual_Number_of_Attendees__c</fullName>
    <label>Actual Number Of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>