force-app/main/default/objects/Case/fields/I_ST_Additional_event_details__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Additional_event_details__c</fullName>
    <label>Additional Event Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>