force-app/main/default/objects/Case/fields/I_ST_Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus_Interest__c</fullName>
    <description>created for IST 188</description>
    <label>Campus Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Campus</valueSetName>
    </valueSet>
</CustomField>