force-app/main/default/objects/Case/fields/I_ST_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Case_Category__c</fullName>
    <description>Created for IST -188</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Case_Category</valueSetName>
    </valueSet>
</CustomField>