force-app/main/default/objects/Case/fields/I_ST_Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Case_Outcome__c</fullName>
    <description>Created for US 188</description>
    <label>Case Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Case_Outcome</valueSetName>
    </valueSet>
</CustomField>