force-app/main/default/objects/Case/fields/I_ST_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact_First_Name__c</fullName>
    <description>To get the first name from webforms and to create new contact if the contact doesn&apos;t exist</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>