force-app/main/default/objects/Case/fields/I_ST_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact_Last_Name__c</fullName>
    <description>To get the last name from webforms and to create new contact if the contact doesn&apos;t exist</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>