force-app/main/default/objects/Case/fields/I_ST_Course_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Campus__c</fullName>
    <formula>I_ST_Course_Availability__r.I_ST_Campus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Course Campus of the Course Availability</inlineHelpText>
    <label>Course Campus</label>
    <type>Text</type>
</CustomField>