force-app/main/default/objects/Case/fields/I_ST_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course of Interest (Dom)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Award_Title__c</field>
            <operation>notContain</operation>
            <value>complementary</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Version_Year__c</field>
            <operation>notContain</operation>
            <value>2017</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Version_Year__c</field>
            <operation>notContain</operation>
            <value>2018</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Version_Year__c</field>
            <operation>notContain</operation>
            <value>2019</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Version_Year__c</field>
            <operation>notContain</operation>
            <value>2020</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Version_Year__c</field>
            <operation>notContain</operation>
            <value>2021</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Study_Level_Name__c</field>
            <operation>notEqual</operation>
            <value>Non Award</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.I_IL_Dom_Course_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Published_On_Find_A_Course__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>