force-app/main/default/objects/Case/fields/I_ST_Course_Teaching_Period__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Teaching_Period__c</fullName>
    <formula>TEXT(I_ST_Course_Availability__r.L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <inlineHelpText>Shows the intake period of the Course Availability</inlineHelpText>
    <label>Intake Period</label>
    <type>Text</type>
</CustomField>