force-app/main/default/objects/Case/fields/I_ST_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Type_Name__c</fullName>
    <formula>I_ST_Course_Name__r.L_AD_Award_Title__c</formula>
    <inlineHelpText>Course Name of selected Course Code.</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>