force-app/main/default/objects/Case/fields/I_ST_Do_not_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Do_not_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if you do NOT want this case activity to count towards a contact&apos;s score</description>
    <inlineHelpText>Check this field if you do NOT want this case activity to count towards a contact&apos;s score</inlineHelpText>
    <label>Do not Score</label>
    <type>Checkbox</type>
</CustomField>