force-app/main/default/objects/Case/fields/I_ST_Enquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Enquirer_Type__c</fullName>
    <description>Created for IST 188</description>
    <inlineHelpText>This is the Enquirer Type</inlineHelpText>
    <label>What best describes you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Enquirer_Type</valueSetName>
    </valueSet>
</CustomField>