force-app/main/default/objects/Case/fields/I_ST_Expected_Attendance_Numbers__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Expected_Attendance_Numbers__c</fullName>
    <label>Expected Attendance Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>