force-app/main/default/objects/Case/fields/I_ST_First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>I_ST_First_Response_Date_Time__c</fullName>
    <label>First Response Date Time</label>
    <type>DateTime</type>
</CustomField>