force-app/main/default/objects/Case/fields/I_ST_Flagship_Course__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Flagship_Course__c</fullName>
    <formula>I_ST_Course_Name__r.I_ST_Flagship_Course__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagship Course</label>
    <type>Checkbox</type>
</CustomField>