force-app/main/default/objects/Case/fields/I_ST_Full_Time_Course__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Full_Time_Course__c</fullName>
    <formula>I_ST_Course_Availability__r.L_AD_Domestic_Study_Modes_Full_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Full Time</label>
    <type>Checkbox</type>
</CustomField>