force-app/main/default/objects/Case/fields/I_ST_Incremental_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Incremental_Score__c</fullName>
    <label>Incremental Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>