force-app/main/default/objects/Case/fields/I_ST_Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Intended_Audience__c</fullName>
    <label>Intended Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Intended_Audience</valueSetName>
    </valueSet>
</CustomField>