force-app/main/default/objects/Case/fields/I_ST_Intended_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Intended_Course_Name__c</fullName>
    <inlineHelpText>Intended Course Name from Case</inlineHelpText>
    <label>Intended Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>