force-app/main/default/objects/Case/fields/I_ST_Intended_Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Intended_Subject_Area__c</fullName>
    <label>Intended Subject Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Pathways</fullName>
            </value>
            <value>
                <fullName>Arts, Social Sciences and Communications</fullName>
            </value>
            <value>
                <fullName>Business and Commerce</fullName>
            </value>
            <value>
                <fullName>Education and teaching</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>IT and engineering</fullName>
            </value>
            <value>
                <fullName>Law and criminology</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>