force-app/main/default/objects/Case/fields/I_ST_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Internal_Comments__c</fullName>
    <description>Added for IST -327</description>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>