force-app/main/default/objects/Case/fields/I_ST_Internal_Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Internal_Resources_Required__c</fullName>
    <label>Internal Resources Required</label>
    <type>TextArea</type>
</CustomField>