force-app/main/default/objects/Case/fields/I_ST_La_Trobe_campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_La_Trobe_campus__c</fullName>
    <description>created for account management</description>
    <label>La Trobe Campus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Preferred_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Campus</valueSetName>
    </valueSet>
</CustomField>