force-app/main/default/objects/Case/fields/I_ST_Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Source_Category__c</fullName>
    <description>Lead Source Category</description>
    <label>Lead Source Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>