force-app/main/default/objects/Case/fields/I_ST_Lead_Source_sub_category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Source_sub_category__c</fullName>
    <description>Added for IST-251</description>
    <label>Lead Source Sub Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>