force-app/main/default/objects/Case/fields/I_ST_Number_of_contact_cards_collected__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Number_of_contact_cards_collected__c</fullName>
    <label>Number Of Contact Cards Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>