force-app/main/default/objects/Case/fields/I_ST_Number_of_Course_Guides_Handed_Out__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Number_of_Course_Guides_Handed_Out__c</fullName>
    <label>Number of Course Guides Handed Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>