force-app/main/default/objects/Case/fields/I_ST_Nurture__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Nurture__c</fullName>
    <description>Added for IST-327</description>
    <label>Nurture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked one 1:1 Consultation</fullName>
            </value>
            <value>
                <fullName>Yes – Call after Easter</fullName>
            </value>
            <value>
                <fullName>Yes – Call in October</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>