force-app/main/default/objects/Case/fields/I_ST_Other_University__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Other_University__c</fullName>
    <description>Added for IST-327</description>
    <label>Other University</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Other_University</valueSetName>
    </valueSet>
</CustomField>