force-app/main/default/objects/Case/fields/I_ST_Outbound_Attempt__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Outbound_Attempt__c</fullName>
    <description>Added for IST-327</description>
    <label>Outbound Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Attempt Failed</fullName>
            </value>
            <value>
                <fullName>2nd Attempt Failed</fullName>
            </value>
            <value>
                <fullName>3rd Attempt Failed</fullName>
            </value>
            <value>
                <fullName>Call Not Required</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Returned Call</fullName>
            </value>
            <value>
                <fullName>Responded To Text</fullName>
            </value>
            <value>
                <fullName>No Response To Text</fullName>
            </value>
            <value>
                <fullName>Responded to Email</fullName>
            </value>
            <value>
                <fullName>No Response to Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>