force-app/main/default/objects/Case/fields/I_ST_Outbound_Campaign__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Outbound_Campaign__c</fullName>
    <description>Created for IST 188</description>
    <label>Outbound Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Outbound_Campaign</valueSetName>
    </valueSet>
</CustomField>