force-app/main/default/objects/Case/fields/I_ST_Outbound_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Outbound_Status__c</fullName>
    <description>Created for IST304</description>
    <label>Outbound Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Bad Data - International</fullName>
            </value>
            <value>
                <fullName>Bad Data - No Contact Number</fullName>
            </value>
            <value>
                <fullName>Bad Data - Wrong Number</fullName>
            </value>
            <value>
                <fullName>Called Back After Voicemail</fullName>
            </value>
            <value>
                <fullName>Call Not Required</fullName>
            </value>
            <value>
                <fullName>SMS Sent</fullName>
            </value>
            <value>
                <fullName>Unanswered - No Voicemail</fullName>
            </value>
            <value>
                <fullName>Unanswered - Voicemail</fullName>
            </value>
            <value>
                <fullName>Email sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>