force-app/main/default/objects/Case/fields/I_ST_Pathway_Course__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Pathway_Course__c</fullName>
    <label>Pathway Course</label>
    <length>20</length>
    <type>Text</type>
</CustomField>