force-app/main/default/objects/Case/fields/I_ST_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Position_Title__c</fullName>
    <description>Created for IST 188</description>
    <label>Position Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>