force-app/main/default/objects/Case/fields/I_ST_Postcode__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Postcode__c</fullName>
    <description>Added for IST-127</description>
    <label>Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>