force-app/main/default/objects/Case/fields/I_ST_Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Preferred_Location__c</fullName>
    <description>created for Account Management IST 183</description>
    <label>Preferred Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Trobe Campus</fullName>
            </value>
            <value>
                <fullName>Your School</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>