force-app/main/default/objects/Case/fields/I_ST_Prior_Incremental_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Prior_Incremental_Score__c</fullName>
    <description>Stores the prior incremental score when the score changes</description>
    <label>Prior Incremental Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>