force-app/main/default/objects/Case/fields/I_ST_Proposed_Activity_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Proposed_Activity_End_Datetime__c</fullName>
    <description>Added for Activity booking web form</description>
    <label>Proposed Activity End Date and Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>