force-app/main/default/objects/Case/fields/I_ST_Proposed_Activity_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Proposed_Activity_Start_Datetime__c</fullName>
    <description>Proposed activity booking date and time provided by the requester</description>
    <label>Proposed Activity Start Date and Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>