force-app/main/default/objects/Case/fields/I_ST_Proposed_End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Proposed_End_Date_and_Time__c</fullName>
    <description>created for IST 308</description>
    <label>End Date and Time</label>
    <type>DateTime</type>
</CustomField>