force-app/main/default/objects/Case/fields/I_ST_Question__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Question__c</fullName>
    <description>Added for IST-443</description>
    <label>Your Question? (max. 255 chars)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>