force-app/main/default/objects/Case/fields/I_ST_Reasons_For_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Reasons_For_Outcome__c</fullName>
    <description>I_ST_Reasons_For_Outcome</description>
    <label>Reason for outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course Related</fullName>
            </value>
            <value>
                <fullName>Enrolled/Going to Another Institution</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Financial Reasons</fullName>
            </value>
            <value>
                <fullName>Interested in another La Trobe course</fullName>
            </value>
            <value>
                <fullName>Location of Campus</fullName>
            </value>
            <value>
                <fullName>Personal Circumstances</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Say</fullName>
            </value>
            <value>
                <fullName>Similar Course</fullName>
            </value>
            <value>
                <fullName>Systems/Processes</fullName>
            </value>
            <value>
                <fullName>Waiting on other preferences</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>