force-app/main/default/objects/Case/fields/I_ST_Residency_Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Residency_Citizenship_Status__c</fullName>
    <label>Residency / Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Citizen</fullName>
            </value>
            <value>
                <fullName>New Zealand Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident Of Australia</fullName>
            </value>
            <value>
                <fullName>Overseas Student Residing Overseas</fullName>
            </value>
            <value>
                <fullName>International Student Or Temporary Entry Visa Holder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>