force-app/main/default/objects/Case/fields/I_ST_School_or_Educational_body__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School_or_Educational_body__c</fullName>
    <label>School Or Educational Body</label>
    <type>TextArea</type>
</CustomField>