force-app/main/default/objects/Case/fields/I_ST_Score_Calculated__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Score_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I ST Score Calculated</label>
    <type>Checkbox</type>
</CustomField>