force-app/main/default/objects/Case/fields/I_ST_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Sub_Status__c</fullName>
    <description>Created for IST 188</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_CaseSub_Status</valueSetName>
    </valueSet>
</CustomField>