force-app/main/default/objects/Case/fields/I_ST_Teaching_Period__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Teaching_Period__c</fullName>
    <description>Created for IST 188</description>
    <label>Teaching Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Teaching_Period</valueSetName>
    </valueSet>
</CustomField>