force-app/main/default/objects/Case/fields/I_ST_Timeframe_To_Study__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Timeframe_To_Study__c</fullName>
    <description>Created for IST -188</description>
    <label>Timeframe To Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Time_Frame_to_Study</valueSetName>
    </valueSet>
</CustomField>