force-app/main/default/objects/Case/fields/I_ST_Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Topics_Discussed__c</fullName>
    <label>Topics Discussed</label>
    <type>TextArea</type>
</CustomField>