force-app/main/default/objects/Case/fields/L_BAU_Country_of_birth__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Country_of_birth__c</fullName>
    <formula>Contact.I_RS_Place_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of birth</label>
    <type>Text</type>
</CustomField>