force-app/main/default/objects/Case/fields/L_BAU_Course_Preference_1_Outcome__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Course_Preference_1_Outcome__c</fullName>
    <description>Course Preference 1 -  Outcome</description>
    <inlineHelpText>Course Preference 1 -  Outcome</inlineHelpText>
    <label>Course Preference 1 -  Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Value</fullName>
            </value>
            <value>
                <fullName>Offer selected</fullName>
            </value>
            <value>
                <fullName>No offer</fullName>
            </value>
            <value>
                <fullName>Offer pathway course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>